Add 2016 logo and provisional header css work

--- a/app/index.html
+++ b/app/index.html
@@ -32,7 +32,9 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">didsBeerFestV2</a>
+            <a class="navbar-brand" href="#/">
+               <img class="image" src="images/2016logo.png" alt="Didsbury Beer Festival 2016"><br>
+            </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
@@ -53,7 +55,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> from the Yeoman team</p>
+        <p><span class="glyphicon glyphicon-glass"></span> Didsbury Beer Festival 2016</p>
       </div>
     </div>
 
