--- a/app/index.html
+++ b/app/index.html
@@ -33,16 +33,16 @@
             </button>
 
             <a class="navbar-brand" href="#/">
-               <img class="image" src="images/2016logo.png" alt="Didsbury Beer Festival 2016"><br>
+               <img class="image" src="images/dbfheader.png" alt="Didsbury Beer Festival 2016"><br>
             </a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li id="lnkHome" class="active"><a href="#/">Home</a></li>
+              <li id="lnkAbout"><a ng-href="#/about">About</a></li>
+              <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -55,7 +55,7 @@
 
     <div class="footer">
       <div class="container">
-        <p><span class="glyphicon glyphicon-glass"></span> Didsbury Beer Festival 2016</p>
+        <p><img class="footerimage" src="images/2016logosmall.png" alt="Didsbury Beer Festival 2016"> Didsbury Beer Festival 2016</p>
       </div>
     </div>
 
@@ -90,6 +90,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/controllers/contact.js"></script>
         <!-- endbuild -->
 </body>
 </html>
