--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,7 @@
        r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
        }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-       ga('create', 'UA-XXXXX-X');
+       ga('create', 'UA-35875054-1');
        ga('send', 'pageview');
     </script>
 
