add link to last years site

--- a/app/index.html
+++ b/app/index.html
@@ -43,6 +43,7 @@
               <li id="lnkHome" class="active"><a href="#/">Home</a></li>
               <li id="lnkAbout"><a ng-href="#/about">About</a></li>
               <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
+              <li id="lnkLastYear"><a ng-href="/lastyear">Last Year</a></li>
             </ul>
           </div>
         </div>
