Use SVG vector version of logo - no pixellation

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
             </button>
 
             <a class="navbar-brand" href="#/">
-               <img class="image" src="images/dbfheader.png" alt="Didsbury Beer Festival 2016"><br>
+               <img class="image" src="images/dbfheader.svg" alt="Didsbury Beer Festival 2016"><br>
             </a>
           </div>
 
