--- a/app/404.html
+++ b/app/404.html
@@ -26,7 +26,7 @@
           <div class="navbar-header">
 
             <a class="navbar-brand" href="#/">
-               <img class="image" src="images/dbfheader.png" alt="Didsbury Beer Festival 2016"><br>
+               <img class="image" src="images/dbfheader.svg" alt="Didsbury Beer Festival 2016"><br>
             </a>
           </div>
         </div>
