--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,8 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <meta name="theme-color" content="#0096c9">
+    <title>Didsbury Beer Festival 2016</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
