Add find page with new map image & controller which changes container css class

--- a/app/index.html
+++ b/app/index.html
@@ -42,6 +42,7 @@
 
             <ul class="nav navbar-nav">
               <li id="lnkHome" class="active"><a href="#/">Home</a></li>
+              <li id="lnkFind"><a ng-href="#/find">Find Us</a></li>
               <li id="lnkAbout"><a ng-href="#/about">About</a></li>
               <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
               <li id="lnkLastYear"><a ng-href="/lastyear">Last Year</a></li>
@@ -51,7 +52,7 @@
       </div>
     </div>
 
-    <div class="container">
+    <div class="container mainContainer">
     <div ng-view=""></div>
     </div>
 
@@ -93,6 +94,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/contact.js"></script>
+        <script src="scripts/controllers/find.js"></script>
         <!-- endbuild -->
 </body>
 </html>
