--- a/app/index.html
+++ b/app/index.html
@@ -58,6 +58,17 @@
 
     <div class="footer">
       <div class="container">
+        <!-- slider -->
+<div class="slider-container">
+  <p>Many thanks to our sponsors:</p>
+	<ul id="slider">
+      <li><a href="http://smcreditunion.co.uk/"><img src="images/sponsors/1.png"></a></li>
+      <li><a href="http://www.bottonline.co.uk/"><img src="images/sponsors/2.png"></a></li>
+      <li><a href="http://www.wearecreation.co.uk/"><img src="images/sponsors/3.png"></a></li>
+      <li><a href="http://www.claytonhulme.co.uk/"><img src="images/sponsors/4.png"></a></li>
+	</ul>
+
+</div><!-- /slider -->
         <p><img class="footerimage" src="images/2016logosmall.png" alt="Didsbury Beer Festival 2016"> Didsbury Beer Festival 2016</p>
       </div>
     </div>
@@ -95,6 +106,17 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/controllers/find.js"></script>
+        <!-- bxSlider Javascript file -->
+        <script src="scripts/jquery.bxslider.js"></script>
+        <script type="text/javascript">
+          $(document).ready(function(){
+            $('#slider').bxSlider({
+              ticker: true,
+              tickerSpeed: 3500,
+              tickerHover: true
+            });
+          });
+        </script>
         <!-- endbuild -->
 </body>
 </html>
