Move document ready script out of index file - minification was removing it

--- a/app/index.html
+++ b/app/index.html
@@ -107,16 +107,8 @@
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/controllers/find.js"></script>
         <!-- bxSlider Javascript file -->
-        <script src="scripts/jquery.bxslider.js"></script>
-        <script type="text/javascript">
-          $(document).ready(function(){
-            $('#slider').bxSlider({
-              ticker: true,
-              tickerSpeed: 3500,
-              tickerHover: true
-            });
-          });
-        </script>
+        <script src="scripts/jquery.bxSlider.js"></script>
+        <script src="scripts/custom.js"></script>
         <!-- endbuild -->
 </body>
 </html>
