--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
       <li><a href="http://www.bottonline.co.uk/"><img src="images/sponsors/2.png"></a></li>
       <li><a href="http://www.wearecreation.co.uk/"><img src="images/sponsors/3.png"></a></li>
       <li><a href="http://www.claytonhulme.co.uk/"><img src="images/sponsors/4.png"></a></li>
+      <li><a href="https://twitter.com/Wheildons/"><img src="images/sponsors/5.png"></a></li>
 	</ul>
 
 </div><!-- /slider -->
