Added countdown timer to home page, new sponsor, and link to google maps on find us page

--- a/app/index.html
+++ b/app/index.html
@@ -67,6 +67,7 @@
       <li><a href="http://www.wearecreation.co.uk/"><img src="images/sponsors/3.png"></a></li>
       <li><a href="http://www.claytonhulme.co.uk/"><img src="images/sponsors/4.png"></a></li>
       <li><a href="https://twitter.com/Wheildons/"><img src="images/sponsors/5.png"></a></li>
+      <li><img src="images/sponsors/6.png"></li>
 	</ul>
 
 </div><!-- /slider -->
@@ -109,6 +110,7 @@
         <script src="scripts/controllers/find.js"></script>
         <!-- bxSlider Javascript file -->
         <script src="scripts/jquery.bxSlider.js"></script>
+        <script src="scripts/flipclock.min.js"></script>
         <script src="scripts/custom.js"></script>
         <!-- endbuild -->
 </body>
