--- a/app/index.html
+++ b/app/index.html
@@ -87,6 +87,8 @@
        ga('send', 'pageview');
     </script>
 
+    
+
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/angular/angular.js"></script>
@@ -99,6 +101,7 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.js"></script>
+    <script src="bower_components/ngtweet/dist/ngtweet.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
