--- a/app/index.html
+++ b/app/index.html
@@ -40,11 +40,13 @@
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
-            <ul class="nav navbar-nav">
+            <ul class="nav navbar-nav main-nav">
+              <img id="navLogo" style="display:none;" src="images/dbfheadersmall.svg" />
               <li id="lnkHome" class="active"><a href="#/">Home</a></li>
               <li id="lnkFind"><a ng-href="#/find">Find Us</a></li>
               <li id="lnkAbout"><a ng-href="#/about">About</a></li>
               <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
+              <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
               <li id="lnkLastYear"><a ng-href="/lastyear">Last Year</a></li>
             </ul>
           </div>
@@ -111,6 +113,7 @@
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/contact.js"></script>
         <script src="scripts/controllers/find.js"></script>
+        <script src="scripts/controllers/volunteer.js"></script>
         <!-- bxSlider Javascript file -->
         <script src="scripts/jquery.bxSlider.js"></script>
         <script src="scripts/flipclock.min.js"></script>
