Add ng-cloak to small header logo to prevent flashing up on initial page load (before angular has fully loaded)

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav main-nav">
-              <img id="navLogo" ng-hide src="images/dbfheadersmall.svg" />
+              <img id="navLogo" ng-hide ng-cloak src="images/dbfheadersmall.svg" />
               <li id="lnkHome" class="active"><a href="#/">Home</a></li>
               <li id="lnkFind"><a ng-href="#/find">Find Us</a></li>
               <li id="lnkAbout"><a ng-href="#/about">About</a></li>
