Add barnes walker logo

--- a/app/index.html
+++ b/app/index.html
@@ -70,6 +70,7 @@
       <li><a href="http://www.claytonhulme.co.uk/"><img src="images/sponsors/4.png"></a></li>
       <li><a href="https://twitter.com/Wheildons/"><img src="images/sponsors/5.png"></a></li>
       <li><img src="images/sponsors/6.png"></li>
+      <li><a href="http://www.barneswalker.co.uk"><img src="images/sponsors/7.png"></a></li>
 	</ul>
 
 </div><!-- /slider -->
