--- a/app/index.html
+++ b/app/index.html
@@ -71,6 +71,7 @@
       <li><a href="https://twitter.com/Wheildons/"><img src="images/sponsors/5.png"></a></li>
       <li><img src="images/sponsors/6.png"></li>
       <li><a href="http://www.barneswalker.co.uk"><img src="images/sponsors/7.png"></a></li>
+      <li><a href="http://www.aqua-check.co.uk/"><img src="images/sponsors/8.jpg"></a></li>
 	</ul>
 
 </div><!-- /slider -->
