--- a/app/index.html
+++ b/app/index.html
@@ -9,6 +9,7 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
+    <link rel="stylesheet" href="bower_components/magnific-popup/dist/magnific-popup.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -48,6 +49,12 @@
               <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
               <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
               <li id="lnkLastYear"><a ng-href="/lastyear">Last Year</a></li>
+              <li>
+                <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup">
+                  <span class="glyphicon glyphicon-play-circle"></span>
+                  <span> Video</span>
+                </a>
+              </li>
             </ul>
           </div>
         </div>
@@ -114,6 +121,7 @@
     <script src="bower_components/google-maps-utility-library-v3-keydragzoom/dist/keydragzoom.js"></script>
     <script src="bower_components/js-rich-marker/src/richmarker.js"></script>
     <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
+    <script src="bower_components/magnific-popup/dist/jquery.magnific-popup.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
