Made header smaller, added new sponsor logo

--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
       <li><img src="images/sponsors/6.png"></li>
       <li><a href="http://www.barneswalker.co.uk"><img src="images/sponsors/7.png"></a></li>
       <li><a href="http://www.aqua-check.co.uk/"><img src="images/sponsors/8.jpg"></a></li>
+      <li><a href="http://www.manchestereveningnews.co.uk/"><img src="images/sponsors/9.png"></a></li>
 	</ul>
 
 </div><!-- /slider -->
