--- a/app/index.html
+++ b/app/index.html
@@ -81,6 +81,7 @@
       <li><a href="http://www.barneswalker.co.uk"><img src="images/sponsors/7.png"></a></li>
       <li><a href="http://www.aqua-check.co.uk/"><img src="images/sponsors/8.jpg"></a></li>
       <li><a href="http://www.manchestereveningnews.co.uk/"><img src="images/sponsors/9.png"></a></li>
+      <li><a href="http://www.thebarbershopdidsbury.co.uk/"><img src="images/sponsors/10.png"></a></li>
 	</ul>
 
 </div><!-- /slider -->
