--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,7 @@
               <li id="lnkHome" class="active"><a href="#/">Home</a></li>
               <li id="lnkFind"><a ng-href="#/find">Find Us</a></li>
               <li id="lnkTickets"><a ng-href="#/tickets">Tickets</a></li>
+              <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li>
               <li id="lnkAbout"><a ng-href="#/about">About</a></li>
               <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
               <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
@@ -136,6 +137,7 @@
         <script src="scripts/controllers/find.js"></script>
         <script src="scripts/controllers/volunteer.js"></script>
         <script src="scripts/controllers/tickets.js"></script>
+        <script src="scripts/controllers/goodcauses.js"></script>
         <!-- bxSlider Javascript file -->
         <script src="scripts/jquery.bxSlider.js"></script>
         <script src="scripts/flipclock.min.js"></script>
