First draft of music page

--- a/app/index.html
+++ b/app/index.html
@@ -51,6 +51,7 @@
               <li id="lnkAbout"><a ng-href="#/about">About</a></li>
               <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
               <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
+              <li id="lnkMusic"><a ng-href="#/music">Music</a></li>
               <li id="lnkLastYear"><a ng-href="/lastyear">Last Year</a></li>
               <li>
                 <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup">
@@ -139,6 +140,7 @@
         <script src="scripts/controllers/volunteer.js"></script>
         <script src="scripts/controllers/tickets.js"></script>
         <script src="scripts/controllers/goodcauses.js"></script>
+        <script src="scripts/controllers/music.js"></script>
         <!-- bxSlider Javascript file -->
         <script src="scripts/jquery.bxSlider.js"></script>
         <script src="scripts/custom.js"></script>
