--- a/app/index.html
+++ b/app/index.html
@@ -84,6 +84,7 @@
       <li><a href="http://www.aqua-check.co.uk/"><img src="images/sponsors/8.jpg"></a></li>
       <li><a href="http://www.manchestereveningnews.co.uk/"><img src="images/sponsors/9.png"></a></li>
       <li><a href="http://www.thebarbershopdidsbury.co.uk/"><img src="images/sponsors/10.png"></a></li>
+      <li><a href="http://www.markbratttravel.com/"><img src="images/sponsors/11.png"></a></li>
 	</ul>
 
 </div><!-- /slider -->
