--- a/app/index.html
+++ b/app/index.html
@@ -71,20 +71,10 @@
     <div class="footer">
       <div class="container">
         <!-- slider -->
-<div class="slider-container">
+<div ng-controller="SponsorsCtrl" class="slider-container">
   <p>Many thanks to our sponsors:</p>
 	<ul id="slider">
-      <li><a href="http://smcreditunion.co.uk/"><img src="images/sponsors/1.png"></a></li>
-      <li><a href="http://www.bottonline.co.uk/"><img src="images/sponsors/2.png"></a></li>
-      <li><a href="http://www.wearecreation.co.uk/"><img src="images/sponsors/3.png"></a></li>
-      <li><a href="http://www.claytonhulme.co.uk/"><img src="images/sponsors/4.png"></a></li>
-      <li><a href="https://twitter.com/Wheildons/"><img src="images/sponsors/5.png"></a></li>
-      <li><img src="images/sponsors/6.png"></li>
-      <li><a href="http://www.barneswalker.co.uk"><img src="images/sponsors/7.png"></a></li>
-      <li><a href="http://www.aqua-check.co.uk/"><img src="images/sponsors/8.jpg"></a></li>
-      <li><a href="http://www.manchestereveningnews.co.uk/"><img src="images/sponsors/9.png"></a></li>
-      <li><a href="http://www.thebarbershopdidsbury.co.uk/"><img src="images/sponsors/10.png"></a></li>
-      <li><a href="http://www.markbratttravel.com/"><img src="images/sponsors/11.png"></a></li>
+      <li ng-repeat="sponsor in sponsorList|orderBy:random" ng-bind-html="sponsor">{{sponsor}}</li>
 	</ul>
 
 </div><!-- /slider -->
@@ -142,6 +132,7 @@
         <script src="scripts/controllers/tickets.js"></script>
         <script src="scripts/controllers/goodcauses.js"></script>
         <script src="scripts/controllers/music.js"></script>
+        <script src="scripts/controllers/sponsors.js"></script>
         <!-- bxSlider Javascript file -->
         <script src="scripts/jquery.bxSlider.js"></script>
         <script src="scripts/custom.js"></script>
