--- a/app/index.html
+++ b/app/index.html
@@ -47,6 +47,8 @@
               <li id="lnkHome" class="active"><a href="#/">Home</a></li>
               <li id="lnkFind"><a ng-href="#/find">Find Us</a></li>
               <li id="lnkTickets"><a ng-href="#/tickets">Tickets</a></li>
+              <!--<li id="lnkBeer"><a ng-href="#/beer">Beer</a></li>-->
+              <li id="lnkCider"><a ng-href="#/cider">Cider</a></li>
               <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li>
               <li id="lnkAbout"><a ng-href="#/about">About</a></li>
               <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
@@ -134,7 +136,9 @@
         <script src="scripts/controllers/volunteer.js"></script>
         <script src="scripts/controllers/tickets.js"></script>
         <script src="scripts/controllers/goodcauses.js"></script>
-        <script src="scripts/controllers/music.js"></script>        
+        <script src="scripts/controllers/music.js"></script> 
+        <script src="scripts/controllers/beer.js"></script> 
+        <script src="scripts/controllers/cider.js"></script>        
         <!-- bxSlider Javascript file -->
         <script src="scripts/jquery.bxSlider.js"></script>
         <script src="scripts/custom.js"></script>
