--- a/app/index.html
+++ b/app/index.html
@@ -5,7 +5,7 @@
     <meta name="theme-color" content="#0096c9">
     <title>Didsbury Beer Festival 2016</title>
     <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
