Rough draft of beer list

--- a/app/index.html
+++ b/app/index.html
@@ -47,7 +47,7 @@
               <li id="lnkHome" class="active"><a href="#/">Home</a></li>
               <li id="lnkFind"><a ng-href="#/find">Find Us</a></li>
               <li id="lnkTickets"><a ng-href="#/tickets">Tickets</a></li>
-              <!--<li id="lnkBeer"><a ng-href="#/beer">Beer</a></li>-->
+              <li id="lnkBeer"><a ng-href="#/beer">Beer</a></li>
               <li id="lnkCider"><a ng-href="#/cider">Cider</a></li>
               <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li>
               <li id="lnkAbout"><a ng-href="#/about">About</a></li>
