Add beer list & tasting notes for cider list. Add social to nav bar. Resize elements in nav bar. Centre text in nav bar. Remove home link

--- a/app/index.html
+++ b/app/index.html
@@ -41,11 +41,10 @@
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
             <ul class="nav navbar-nav main-nav">
               <img id="navLogo" ng-hide style="display:none;" src="images/dbfheadersmall.svg" />
-              <li id="lnkHome" class="active"><a href="#/">Home</a></li>
-              <li id="lnkFind"><a ng-href="#/find">Find Us</a></li>
+              <!--<li id="lnkHome" class="active"><a href="#/">Home</a></li>-->
+              <li id="lnkFind"><a ng-href="#/find">Find</a></li>
               <li id="lnkTickets"><a ng-href="#/tickets">Tickets</a></li>
               <li id="lnkBeer"><a ng-href="#/beer">Beer</a></li>
               <li id="lnkCider"><a ng-href="#/cider">Cider</a></li>
@@ -54,11 +53,27 @@
               <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
               <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
               <li id="lnkMusic"><a ng-href="#/music">Music</a></li>
-              <li id="lnkLastYear"><a ng-href="/lastyear">Last Year</a></li>
+              <li id="lnkLastYear"><a ng-href="/lastyear">2015</a></li>
               <li>
                 <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup">
                   <span> Video</span>
                 </a>
+              </li>
+              <li class="navSocial">
+                <p>
+                  <br> 
+                  <a href="https://twitter.com/dbf_beer"><i id="jv-twitter_alt" class="jv-twitter_alt"></i></a>
+                  &nbsp;
+                  <a href="https://www.facebook.com/pages/Didsbury-Beer-Festival/353791738079986"><i id="jv-facebook_alt" class="jv-facebook_alt"></i></a>
+                  &nbsp;
+                  <a href="http://www.flickr.com/photos/65526946@N08/"><i id="jv-flickr" class="jv-flickr"></i></a>
+                  &nbsp;
+                  <a href="http://www.youtube.com/user/Didsburybeerfestival"><i id="jv-youtube" class="jv-youtube"></i></a>
+                  &nbsp;
+                  <a href="http://didsburybeer.blogspot.co.uk/"><i id="jv-blogger" class="jv-blogger"></i></a>
+                  &nbsp;
+                  <a href="https://plus.google.com/111188242650217473870" rel="publisher"><i id="jv-google" class="jv-google"></i>+</a>
+              </p>
               </li>
             </ul>
           </div>
