--- a/app/index.html
+++ b/app/index.html
@@ -42,7 +42,7 @@
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
             <ul class="nav navbar-nav main-nav">
-              <img id="navLogo" ng-hide style="display:none;" src="images/dbfheadersmall.svg" />
+              <a href="#/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheadersmall.svg" /></a>
               <!--<li id="lnkHome" class="active"><a href="#/">Home</a></li>-->
               <li id="lnkFind"><a ng-href="#/find">Find</a></li>
               <li id="lnkTickets"><a ng-href="#/tickets">Tickets</a></li>
