Add some metadata for rich search results

--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="theme-color" content="#0096c9">
-    <title>Didsbury Beer Festival 2016</title>
-    <meta name="description" content="">
+    <title>The 9th Annual Didsbury Beer Festival</title>
+	<meta name="description" content="Welcome to the 9th annual Didsbury Beer Festival, taking place on 27th, 28th & 29th October 2016. 100+ Beers, Ciders & Perries, with great food & music." />
+	<meta name="keywords" content="Beer, Festival, Cider, Perry, Craft, Lager, Music, Food, Didsbury, Keg" />
+	<meta name="robots" content="index, follow">
+<title>The 9th Annual Didsbury Beer Festival</title>
+<!-- Didsbury, Beer, Festival -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
