Add manifest tags for safari web app - test adding to iphone home screen

--- a/app/index.html
+++ b/app/index.html
@@ -7,6 +7,9 @@
 	<meta name="description" content="Welcome to the 9th annual Didsbury Beer Festival, taking place on 27th, 28th & 29th October 2016. 100+ Beers, Ciders & Perries, with great food & music." />
 	<meta name="keywords" content="Beer, Festival, Cider, Perry, Craft, Lager, Music, Food, Didsbury, Keg" />
 	<meta name="robots" content="index, follow">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <link rel="apple-touch-icon" href="images/touch-icon-iphone.png">
 <title>The 9th Annual Didsbury Beer Festival</title>
 <!-- Didsbury, Beer, Festival -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0"/>
