add 2017 styling and logo

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <meta name="theme-color" content="#0096c9">
+    <meta name="theme-color" content="#d2232a">
     <title>The 10th Annual Didsbury Beer Festival</title>
     <meta name="description" content="Welcome to the 10th annual Didsbury Beer Festival, taking place on 26th, 27th & 28th October 2017. 100+ Beers, Ciders & Perries, with great food & music." />
     <meta name="keywords" content="Beer, Festival, Cider, Perry, Craft, Lager, Music, Food, Didsbury, Keg" />
@@ -119,7 +119,7 @@
 
             </div>
             <!-- /slider -->
-            <p><img class="footerimage" src="images/2016logosmall.png" alt="Didsbury Beer Festival 2017"> Didsbury Beer Festival 2017</p>
+            <p><img class="footerimage" src="images/2017logosmall.png" alt="Didsbury Beer Festival 2017"> Didsbury Beer Festival 2017</p>
         </div>
     </div>
 
