--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,18 @@
 <html manifest="manifest.appcache">
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-35875054-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-35875054-1');
+    </script>
     <meta charset="utf-8">
     <meta name="theme-color" content="#d2232a">
     <title>The 10th Annual Didsbury Beer Festival</title>
@@ -40,7 +52,7 @@
             <div class="container">
                 <div class="navbar-header">
 
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -122,20 +134,6 @@
             <p><img class="footerimage" src="images/2017logosmall.png" alt="Didsbury Beer Festival 2017"> Didsbury Beer Festival 2017</p>
         </div>
     </div>
-
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-    <script>
-        ! function(A, n, g, u, l, a, r) {
-            A.GoogleAnalyticsObject = l, A[l] = A[l] || function() {
-                    (A[l].q = A[l].q || []).push(arguments)
-                }, A[l].l = +new Date, a = n.createElement(g),
-                r = n.getElementsByTagName(g)[0], a.src = u, r.parentNode.insertBefore(a, r)
-        }(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
-
-        ga('create', 'UA-35875054-1');
-        ga('send', 'pageview');
-    </script>
 
     <script src="https://maps.googleapis.com/maps/api/js?v=3&key=AIzaSyDUIkZxzGxRGNEgCWdjOylusJhFetr6qv4"></script>
 
