--- a/app/404.html
+++ b/app/404.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <title></title>
     <meta name="description" content="">
@@ -13,49 +14,57 @@
     <!-- build:css(.tmp) styles/main.css -->
     <link rel="stylesheet" href="styles/main.css">
     <!-- endbuild -->
-  </head>
-  <body ng-app="didsBeerFestV2App">
+</head>
+
+<body ng-app="didsBeerFestV2App">
     <!--[if lte IE 8]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
     <!-- Add your site or application content here -->
     <div class="header">
-      <div class="navbar navbar-default" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+        <div class="navbar navbar-default" role="navigation">
+            <div class="container">
+                <div class="navbar-header">
 
-            <a class="navbar-brand" href="#/">
-               <img class="image" src="images/dbfheader.svg" alt="Didsbury Beer Festival 2016"><br>
-            </a>
-          </div>
+                    <a class="navbar-brand" href="#/">
+                        <img class="image" src="images/dbfheader.svg" alt="Didsbury Beer Festival 2016">
+                        <br>
+                    </a>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
 
     <div class="container">
-    <div class="row marketing col-md-12">
-      <h4>Page not found</h4>
-      <p>The page you are looking for does not currently exist. Click <a href="/">here</a> to go to the homepage.</p></div>
-      <p>Or click <a ng-href="/lastyear">here</a> to check out last years site!</p>
+        <div class="row marketing col-md-12">
+            <h4>Page not found</h4>
+            <p>The page you are looking for does not currently exist. Click
+                <a href="/">here</a> to go to the homepage.</p>
+        </div>
+        <p>Or click
+            <a ng-href="/lastyear">here</a> to check out last years site!</p>
     </div>
 
     <div class="footer">
-      <div class="container">
-        <p><img class="footerimage" src="images/2016logosmall.png" alt="Didsbury Beer Festival 2016"> Didsbury Beer Festival 2016</p>
-      </div>
+        <div class="container">
+            <p>
+                <img class="footerimage" src="images/2016logosmall.png" alt="Didsbury Beer Festival 2016"> Didsbury Beer Festival 2016</p>
+        </div>
     </div>
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <script>
+        ! function(A, n, g, u, l, a, r) {
+            A.GoogleAnalyticsObject = l, A[l] = A[l] || function() {
+                    (A[l].q = A[l].q || []).push(arguments)
+                }, A[l].l = +new Date, a = n.createElement(g),
+                r = n.getElementsByTagName(g)[0], a.src = u, r.parentNode.insertBefore(a, r)
+        }(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
-       ga('create', 'UA-35875054-1');
-       ga('send', 'pageview');
+        ga('create', 'UA-35875054-1');
+        ga('send', 'pageview');
     </script>
 
     <!-- build:js(.) scripts/vendor.js -->
@@ -73,9 +82,10 @@
     <!-- endbower -->
     <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js -->
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <!-- endbuild -->
+    <!-- build:js({.tmp,app}) scripts/scripts.js -->
+    <script src="scripts/app.js"></script>
+    <script src="scripts/controllers/main.js"></script>
+    <!-- endbuild -->
 </body>
+
 </html>
