add 2018 logo to footer

--- a/app/index.html
+++ b/app/index.html
@@ -131,7 +131,7 @@
 
             </div>
             <!-- /slider -->
-            <p><img class="footerimage" src="images/2017logosmall.png" alt="Didsbury Beer Festival 2017"> Didsbury Beer Festival 2018</p>
+            <p><img class="footerimage" src="images/DBF 2018 LOGO.svg" alt="Didsbury Beer Festival 2017"> Didsbury Beer Festival 2018</p>
         </div>
     </div>
 
