Update colours throughout to match new styling

--- a/app/index.html
+++ b/app/index.html
@@ -17,7 +17,7 @@
     <meta charset="utf-8">
     <meta name="theme-color" content="#d2232a">
     <title>The 11th Annual Didsbury Beer Festival</title>
-    <meta name="description" content="Welcome to the 11th annual Didsbury Beer Festival, taking place on 26th, 27th & 28th October 2017. 100+ Beers, Ciders & Perries, with great food & music." />
+    <meta name="description" content="Welcome to the 11th annual Didsbury Beer Festival, taking place on 25th, 26th & 27th October 2018. 100+ Beers, Ciders & Perries, with great food & music." />
     <meta name="keywords" content="Beer, Festival, Cider, Perry, Craft, Lager, Music, Food, Didsbury, Keg" />
     <meta name="robots" content="index, follow">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,7 +26,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="images/touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="120x120" href="images/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="images/touch-icon-ipad-retina.png">
-    <title>The 10th Annual Didsbury Beer Festival</title>
+    <title>The 11th Annual Didsbury Beer Festival</title>
     <!-- Didsbury, Beer, Festival -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -68,22 +68,22 @@
                     <ul class="nav navbar-nav main-nav">
                         <a href="#/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheader.svg" /></a>
                         <!--<li id="lnkHome" class="active"><a href="#/">Home</a></li>-->
-                        <li id="lnkFind"><a ng-href="#/find">Find</a></li>
+                        <li id="lnkFind"><a ng-href="#/find">Map</a></li>
                         <li id="lnkTickets"><a ng-href="#/tickets">Tickets</a></li>
-                        <li class="dropdown">
+                        <!-- <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Drinks <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li id="lnkBeer"><a ng-href="#/beer">Cask Ale</a></li>
                                 <li id="lnkCider"><a ng-href="#/cider">Cider</a></li>
                                 <li id="lnkCraft"><a ng-href="#/craft">Keg Lager &amp; Ale</a></li>
                             </ul>
-                        </li>
+                        </li> -->
 
-                        <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li>
+                        <!-- <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li> -->
                         <li id="lnkAbout"><a ng-href="#/about">About</a></li>
                         <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
-                        <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
-                        <li id="lnkMusic"><a ng-href="#/music">Music</a></li>
+                        <!-- <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
+                        <li id="lnkMusic"><a ng-href="#/music">Music</a></li> -->
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Previous Years <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -94,7 +94,7 @@
                         </li>
                         <li>
                             <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup">
-                                <span> Video</span>
+                                Video
                             </a>
                         </li>
                         <li class="navSocial">
