Fix theme colour for android

--- a/app/index.html
+++ b/app/index.html
@@ -15,7 +15,7 @@
         gtag('config', 'UA-35875054-1');
     </script>
     <meta charset="utf-8">
-    <meta name="theme-color" content="#d2232a">
+    <meta name="theme-color" content="#09875d">
     <title>The 11th Annual Didsbury Beer Festival</title>
     <meta name="description" content="Welcome to the 11th annual Didsbury Beer Festival, taking place on 25th, 26th & 27th October 2018. 100+ Beers, Ciders & Perries, with great food & music." />
     <meta name="keywords" content="Beer, Festival, Cider, Perry, Craft, Lager, Music, Food, Didsbury, Keg" />
