Fix header styling

--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
                 </button>
 
                     <a class="navbar-brand" href="#/">
-                        <img class="image" src="images/dbfheader.svg" alt="Didsbury Beer Festival 2017"><br>
+                        <img class="image headerLogo" src="images/dbfheader.svg" alt="Didsbury Beer Festival 2018"><br>
                     </a>
                 </div>
 
