--- a/app/index.html
+++ b/app/index.html
@@ -82,8 +82,8 @@
                         <!-- <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li> -->
                         <li id="lnkAbout"><a ng-href="#/about">About</a></li>
                         <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
-                        <!-- <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
-                        <li id="lnkMusic"><a ng-href="#/music">Music</a></li> -->
+                        <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
+                        <!--<li id="lnkMusic"><a ng-href="#/music">Music</a></li> -->
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Previous Years <span class="caret"></span></a>
                             <ul class="dropdown-menu">
