--- a/app/index.html
+++ b/app/index.html
@@ -66,7 +66,7 @@
 
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav main-nav">
-                        <a href="#/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheader.svg" /></a>
+                        <a href="#/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheadersmalltext.svg" /></a>
                         <!--<li id="lnkHome" class="active"><a href="#/">Home</a></li>-->
                         <li id="lnkFind"><a ng-href="#/find">Map</a></li>
                         <li id="lnkTickets"><a ng-href="#/tickets">Tickets</a></li>
