Add cider list, add twitter ticker to home page

--- a/app/index.html
+++ b/app/index.html
@@ -70,14 +70,14 @@
                         <!--<li id="lnkHome" class="active"><a href="#/">Home</a></li>-->
                         <li id="lnkFind"><a ng-href="#/find">Map</a></li>
                         <li id="lnkTickets"><a ng-href="#/tickets">Tickets</a></li>
-                        <!-- <li class="dropdown">
+                        <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Drinks <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li id="lnkBeer"><a ng-href="#/beer">Cask Ale</a></li>
+                                <!-- <li id="lnkBeer"><a ng-href="#/beer">Cask Ale</a></li> -->
                                 <li id="lnkCider"><a ng-href="#/cider">Cider</a></li>
-                                <li id="lnkCraft"><a ng-href="#/craft">Keg Lager &amp; Ale</a></li>
+                                <!-- <li id="lnkCraft"><a ng-href="#/craft">Keg Lager &amp; Ale</a></li> -->
                             </ul>
-                        </li> -->
+                        </li> -
 
                         <!-- <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li> -->
                         <li id="lnkAbout"><a ng-href="#/about">About</a></li>
