Add link to good causes page

--- a/app/index.html
+++ b/app/index.html
@@ -77,9 +77,9 @@
                                 <li id="lnkCider"><a ng-href="#/cider">Cider</a></li>
                                 <!-- <li id="lnkCraft"><a ng-href="#/craft">Keg Lager &amp; Ale</a></li> -->
                             </ul>
-                        </li> -
+                        </li>
 
-                        <!-- <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li> -->
+                        <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li>
                         <li id="lnkAbout"><a ng-href="#/about">About</a></li>
                         <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
                         <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
