Update bower packages. Fix angular routing issue due to encoding in v1.6. Update travis file to try to build remotely

--- a/app/404.html
+++ b/app/404.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <div class="navbar-header">
 
-                    <a class="navbar-brand" href="#/">
+                    <a class="navbar-brand" href="#!/">
                         <img class="image" src="images/dbfheader.svg" alt="Didsbury Beer Festival 2016">
                         <br>
                     </a>
