--- a/app/index.html
+++ b/app/index.html
@@ -59,31 +59,31 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                    <a class="navbar-brand" href="#/">
+                    <a class="navbar-brand" href="#!/">
                         <img class="image headerLogo" src="images/dbfheader.svg" alt="Didsbury Beer Festival 2018"><br>
                     </a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav main-nav">
-                        <a href="#/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheadersmalltext.svg" /></a>
-                        <!--<li id="lnkHome" class="active"><a href="#/">Home</a></li>-->
-                        <li id="lnkFind"><a ng-href="#/find">Map</a></li>
-                        <li id="lnkTickets"><a ng-href="#/tickets">Tickets</a></li>
+                        <a href="#!/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheadersmalltext.svg" /></a>
+                        <!--<li id="lnkHome" class="active"><a href="#!/">Home</a></li>-->
+                        <li id="lnkFind"><a ng-href="#!/find">Map</a></li>
+                        <li id="lnkTickets"><a ng-href="#!/tickets">Tickets</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Drinks <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <!-- <li id="lnkBeer"><a ng-href="#/beer">Cask Ale</a></li> -->
-                                <li id="lnkCider"><a ng-href="#/cider">Cider</a></li>
-                                <!-- <li id="lnkCraft"><a ng-href="#/craft">Keg Lager &amp; Ale</a></li> -->
+                                <!-- <li id="lnkBeer"><a ng-href="#!/beer">Cask Ale</a></li> -->
+                                <li id="lnkCider"><a ng-href="#!/cider">Cider</a></li>
+                                <!-- <li id="lnkCraft"><a ng-href="#!/craft">Keg Lager &amp; Ale</a></li> -->
                             </ul>
                         </li>
 
-                        <li id="lnkGoodCauses"><a ng-href="#/goodcauses">Good Causes</a></li>
-                        <li id="lnkAbout"><a ng-href="#/about">About</a></li>
-                        <li id="lnkContact"><a ng-href="#/contact">Contact</a></li>
-                        <li id="lnkVolunteer"><a ng-href="#/volunteer">Volunteer</a></li>
-                        <li id="lnkMusic"><a ng-href="#/music">Music</a></li>
+                        <li id="lnkGoodCauses"><a ng-href="#!/goodcauses">Good Causes</a></li>
+                        <li id="lnkAbout"><a ng-href="#!/about">About</a></li>
+                        <li id="lnkContact"><a ng-href="#!/contact">Contact</a></li>
+                        <li id="lnkVolunteer"><a ng-href="#!/volunteer">Volunteer</a></li>
+                        <li id="lnkMusic"><a ng-href="#!/music">Music</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Previous Years <span class="caret"></span></a>
                             <ul class="dropdown-menu">
