Update cider & craft and keg lager list

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
                             <ul class="dropdown-menu">
                                 <!-- <li id="lnkBeer"><a ng-href="#!/beer">Cask Ale</a></li> -->
                                 <li id="lnkCider"><a ng-href="#!/cider">Cider</a></li>
-                                <!-- <li id="lnkCraft"><a ng-href="#!/craft">Keg Lager &amp; Ale</a></li> -->
+                                <li id="lnkCraft"><a ng-href="#!/craft">Lager &amp; Craft Keg</a></li>
                             </ul>
                         </li>
 
