--- a/app/index.html
+++ b/app/index.html
@@ -15,9 +15,9 @@
         gtag('config', 'UA-35875054-1');
     </script>
     <meta charset="utf-8">
-    <meta name="theme-color" content="#09875d">
-    <title>The 11th Annual Didsbury Beer Festival</title>
-    <meta name="description" content="Welcome to the 11th annual Didsbury Beer Festival, taking place on 25th, 26th & 27th October 2018. 100+ Beers, Ciders & Perries, with great food & music." />
+    <meta name="theme-color" content="#ffc627">
+    <title>The 12th Annual Didsbury Beer Festival</title>
+    <meta name="description" content="Welcome to the 12th annual Didsbury Beer Festival, taking place on 24th, 25th & 26th October 2019. 100+ Beers, Ciders & Perries, with great food & music." />
     <meta name="keywords" content="Beer, Festival, Cider, Perry, Craft, Lager, Music, Food, Didsbury, Keg" />
     <meta name="robots" content="index, follow">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -26,7 +26,7 @@
     <link rel="apple-touch-icon" sizes="76x76" href="images/touch-icon-ipad.png">
     <link rel="apple-touch-icon" sizes="120x120" href="images/touch-icon-iphone-retina.png">
     <link rel="apple-touch-icon" sizes="152x152" href="images/touch-icon-ipad-retina.png">
-    <title>The 11th Annual Didsbury Beer Festival</title>
+    <title>The 12th Annual Didsbury Beer Festival</title>
     <!-- Didsbury, Beer, Festival -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0" />
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -60,16 +60,16 @@
                 </button>
 
                     <a class="navbar-brand" href="#!/">
-                        <img class="image headerLogo" src="images/dbfheader.svg" alt="Didsbury Beer Festival 2018"><br>
+                        <img class="image headerLogo" src="images/dbfheader2019.svg" alt="Didsbury Beer Festival 2019"><br>
                     </a>
                 </div>
 
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav main-nav">
-                        <a href="#!/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheadersmalltext.svg" /></a>
+                        <a href="#!/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheader2019.svg" /></a>
                         <!--<li id="lnkHome" class="active"><a href="#!/">Home</a></li>-->
-                        <li id="lnkFind"><a ng-href="#!/find">Map</a></li>
-                        <li id="lnkTickets"><a ng-href="#!/tickets">Tickets</a></li>
+                        <!-- <li id="lnkFind"><a ng-href="#!/find">Map</a></li> -->
+                        <!-- <li id="lnkTickets"><a ng-href="#!/tickets">Tickets</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Drinks <span class="caret"></span></a>
                             <ul class="dropdown-menu">
@@ -79,24 +79,22 @@
                             </ul>
                         </li>
 
-                        <li id="lnkGoodCauses"><a ng-href="#!/goodcauses">Good Causes</a></li>
-                        <li id="lnkAbout"><a ng-href="#!/about">About</a></li>
-                        <li id="lnkContact"><a ng-href="#!/contact">Contact</a></li>
-                        <li id="lnkVolunteer"><a ng-href="#!/volunteer">Volunteer</a></li>
-                        <li id="lnkMusic"><a ng-href="#!/music">Music</a></li>
-                        <li class="dropdown">
+                        <li id="lnkGoodCauses"><a ng-href="#!/goodcauses">Good Causes</a></li> -->
+                        <!-- <li id="lnkVolunteer"><a ng-href="#!/volunteer">Volunteer</a></li> -->
+                        <!-- <li id="lnkMusic"><a ng-href="#!/music">Music</a></li> -->
+                        <!-- <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Previous Years <span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li id="lnkLastYear"><a ng-href="/lastyear">2016</a></li>
                                 <li id="lnk2015"><a ng-href="/2015">2015</a></li>
                                 <li id="lnk2014"><a ng-href="/2014">2014</a></li>
                             </ul>
-                        </li>
-                        <li>
+                        </li> -->
+                        <!-- <li>
                             <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup">
                                 Video
                             </a>
-                        </li>
+                        </li> -->
                         <li class="navSocial">
                             <p>
                                 <br>
@@ -131,7 +129,7 @@
 
             </div>
             <!-- /slider -->
-            <p><img class="footerimage" src="images/DBF 2018 LOGO.svg" alt="Didsbury Beer Festival 2017"> Didsbury Beer Festival 2018</p>
+            <p><img class="footerimage" src="images/DBF 2019 LOGO.svg" alt="Didsbury Beer Festival 2019"> Didsbury Beer Festival 2019</p>
         </div>
     </div>
 
