--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,7 @@
 
         gtag('config', 'UA-35875054-1');
     </script>
+    <script src="../build/client-runtime.js" data-service-worker="service-worker.js"></script>
     <meta charset="utf-8">
     <meta name="theme-color" content="#ffc627">
     <title>The 12th Annual Didsbury Beer Festival</title>
