Fix routing issue and add DS_store to gitignore file

--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
 </head>
 
-<body ng-app="didsBeerFestV2App" ng-strict-di>
+<body ng-app="didsBeerFestV2App">
     <!--[if lte IE 8]>
     <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
