--- a/app/index.html
+++ b/app/index.html
@@ -67,8 +67,8 @@
                 <div class="collapse navbar-collapse" id="js-navbar-collapse">
                     <ul class="nav navbar-nav main-nav">
                         <a href="#!/"><img id="navLogo" ng-hide style="display:none;" src="images/dbfheader2019.svg" /></a>
-                        <!--<li id="lnkHome" class="active"><a href="#!/">Home</a></li>-->
-                        <!-- <li id="lnkFind"><a ng-href="#!/find">Map</a></li> -->
+                        <li id="lnkHome" class="active"><a href="#!/">Home</a></li>
+                        <li id="lnkFind"><a ng-href="#!/find">Map</a></li>
                         <!-- <li id="lnkTickets"><a ng-href="#!/tickets">Tickets</a></li>
                         <li class="dropdown">
                             <a class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Drinks <span class="caret"></span></a>
@@ -78,8 +78,8 @@
                                 <li id="lnkCraft"><a ng-href="#!/craft">Lager &amp; Craft Keg</a></li>
                             </ul>
                         </li>
-
-                        <li id="lnkGoodCauses"><a ng-href="#!/goodcauses">Good Causes</a></li> -->
+                    -->
+                        <li id="lnkGoodCauses"><a ng-href="#!/goodcauses">Good Causes</a></li>
                         <!-- <li id="lnkVolunteer"><a ng-href="#!/volunteer">Volunteer</a></li> -->
                         <!-- <li id="lnkMusic"><a ng-href="#!/music">Music</a></li> -->
                         <!-- <li class="dropdown">
@@ -90,11 +90,11 @@
                                 <li id="lnk2014"><a ng-href="/2014">2014</a></li>
                             </ul>
                         </li> -->
-                        <!-- <li>
+                        <li>
                             <a href="https://www.youtube.com/watch?v=BdoGr0ocBT4" class="youtubePopup">
                                 Video
                             </a>
-                        </li> -->
+                        </li>
                         <li class="navSocial">
                             <p>
                                 <br>
